plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
}

group = 'com.plaza'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

jacoco {
	toolVersion = "0.8.10"
}

test {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required.set(true)
		html.required.set(true)
		csv.required.set(true)
	}

	sourceSets.main.java.srcDirs = ['src/main/java']

	classDirectories.setFrom(files(classDirectories.files.collect {
		fileTree(dir: it,
				exclude: [
						'com/plaza/plazoleta/application/**',
						'com/plaza/plazoleta/domain/api/**',
						'com/plaza/plazoleta/domain/spi/**',
						'com/plaza/plazoleta/infraestructure/configuration/**',
						'com/plaza/plazoleta/infraestructure/exceptionhandler/**',
						'com/plaza/plazoleta/infraestructure/imput/**',
						'com/plaza/plazoleta/infraestructure/output/jpa/entity/**',
						'com/plaza/plazoleta/infraestructure/output/jpa/mapper/**',
						'com/plaza/plazoleta/infraestructure/output/client/mapper/**',
						'com/plaza/plazoleta/infraestructure/output/client/entity/**',
						'com/plaza/plazoleta/infraestructure/security/**',
						'**/*Config.class',
						'**/*Application.class'
				])
	}))
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.mapstruct:mapstruct:1.5.2.Final'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.0'
	implementation("org.springframework.cloud:spring-cloud-starter-openfeign:4.2.1")

	implementation("io.jsonwebtoken:jjwt-api:0.11.5")
	runtimeOnly("io.jsonwebtoken:jjwt-impl:0.11.5")
	runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.11.5")

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
